# together

./: .gitignore  AGENTS.md  Cargo.toml  DENO_ASTRO_TEMPLATE.md  MIGRATION_COMPLETED.md  PLAN.md  README.md  SINGLE_PORT_SETUP.md  Trunk.toml  astro.config.mjs  build.sh  deno.json  dev.ts  env.example  fly.toml  fresh.gen.ts  go.mod  go.sum  index.html  main.go  main.ts  package-lock.json  package.json  setup.sh  state.ts  tailwind.config.js  tailwind.config.mjs  tsconfig.json
.astro/: settings.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: build.yml  deploy.yml
backend/: package-lock.json  package.json  server.js  server.test.js
components/: Button.tsx
docs/: Kế hoạch phát triển Webapp xem video_nghe nhạc YouTube cùng nhau.md  YouTube_Together_WebApp_Development_Plan.md
frontend/: index.html
internal/utils/: main.go
internal/watch2/: client.go  client_list.go  main.go  room.go  watch2.go
islands/: Chat.tsx  JoinForm.tsx  JoinModal.tsx  Queue.tsx  Room.tsx  UserList.tsx  VideoPlayer.tsx
lib/: kv.ts  updateNotifier.ts
migrations/: 001_initial.sql  002_indexes.sql
public/: index.html
routes/: _app.tsx  current-state.ts  index.tsx  join.ts  request-video.ts  room.tsx  send-message.ts  update-mode.ts
routes/api/: events.ts  join.ts  validate-user.ts
server/: README.md  env.example  server.ts
server/database/: connection.ts
server/longpoll/: manager.ts
server/routes/: longpoll.ts
server/services/: YouTubeService.ts
server/trpc/: context.ts  oak-adapter.ts  router.ts
server/utils/: logger.ts
src/: client_api.rs  lib.rs  main.rs
src/components/: chat.rs  join_modal.rs  mod.rs  queue.rs  user_list.rs  video_player.rs
src/layouts/: Layout.astro
src/pages/: demo.astro  home.rs  index.astro  mod.rs
src/pages/room/: [roomId].astro
src/server/: auth.rs  database.rs  events.rs  functions.rs  mod.rs  state.rs  youtube.rs
src/services/: api.ts
src/styles/: global.css
src/types/: mod.rs  models.rs
style/: main.scss  tailwind.css
tests/: auth.rs  integration.rs
utube/: arte.go  main.go  mp4.go  youtube.go
www/: App.tsx  build.ts  dev.ts  main.tsx
www/components/: AuthModal.tsx  Layout.tsx
www/pages/: HomePage.tsx  RoomPage.tsx
www/services/: api.ts
www/styles/: global.css
